start adding operational multithreading