@@ -19,17 +19,16 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 
 public abstract class AbstractAsyncTestServlet extends HttpServlet {
-    
-    private static final String THREAD_MODE = System.getenv("THREAD_MODE");
 
-    private static final int THREAD_POOL_SIZE = Integer.parseInt(System.getenv("THREAD_POOL_SIZE"));
+    protected static final String THREAD_MODE = System.getenv("THREAD_MODE"); // TODO:
+    protected static final int THREAD_POOL_SIZE = Integer.parseInt(System.getenv("THREAD_POOL_SIZE"));
     
-    protected abstract JsonObject executeTest(JsonObject jsonInput);
+    protected abstract JsonObject test(JsonObject jsonInput);
     
     @Resource
     protected ManagedExecutorService managedExecutor;
-    private static final ExecutorService threadPoolExecutor = Executors.newFixedThreadPool(THREAD_POOL_SIZE);
-    private static final ExecutorService virtualThreadExecutor = Executors.newVirtualThreadPerTaskExecutor();
+    protected static final ExecutorService threadPoolExecutor = Executors.newFixedThreadPool(THREAD_POOL_SIZE);
+    protected static final ExecutorService virtualThreadExecutor = Executors.newVirtualThreadPerTaskExecutor();
 
     private JsonObject handleRoute(HttpServletRequest req) {
         ThreadMonitor.countThreads();
@@ -38,7 +37,7 @@ public abstract class AbstractAsyncTestServlet extends HttpServlet {
             final JsonReader jsonReader = Json.createReader(new InputStreamReader(inputStream, "UTF-8"))
         ) {
             final JsonObject jsonInput = jsonReader.readObject();
-            return executeTest(jsonInput);
+            return test(jsonInput);
         } catch (IOException e) {
             e.printStackTrace();
         }
@@ -82,29 +81,11 @@ public abstract class AbstractAsyncTestServlet extends HttpServlet {
     protected void doPost(HttpServletRequest req, HttpServletResponse res) {
         res.setContentType("application/json");
         res.setCharacterEncoding("UTF-8");
-        
+
         AsyncContext asyncContext = req.startAsync();
         // ThreadMonitor.printAllThreads();
 
-        ExecutorService executor = null;
-
-        switch (THREAD_MODE) {
-            case "V" -> {
-                System.out.println("----------V----------");
-                executor = virtualThreadExecutor;
-            }
-            case "M" -> {
-                System.out.println("----------M----------");
-                executor = managedExecutor;
-            }
-            case "TP" -> {
-                System.out.println("----------TP----------");
-                executor = threadPoolExecutor;
-            }
-            default -> {
-                System.out.println("----------NONE----------");
-            }
-        }
+        ExecutorService executor = getExecutor(THREAD_MODE);
 
         CompletableFuture.supplyAsync(() -> handleRoute(req), executor)
                 .thenApply(result -> sendResponse(res, result, asyncContext))
@@ -118,5 +99,25 @@ public abstract class AbstractAsyncTestServlet extends HttpServlet {
         // ThreadMonitor.printAllThreads();
         // ThreadMonitor.countThreads();
     }
-
+    
+    protected ExecutorService getExecutor(String threadMode) {
+        switch (threadMode) {
+            case "V" -> {
+                System.out.println("----------V----------");
+                return virtualThreadExecutor;
+            }
+            case "M" -> {
+                System.out.println("----------M----------");
+                return managedExecutor;
+            }
+            case "TP" -> {
+                System.out.println("----------TP----------");
+                return threadPoolExecutor;
+            }
+            default -> {
+                System.out.println("----------NONE----------");
+                return null;
+            }
+        }
+    }
 }
